--- a/Practica-autolayout/Base.lproj/Main.storyboard
+++ b/Practica-autolayout/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,96 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Practica_autolayout" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" userLabel="Raiz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VcF-ES-Lhc" userLabel="Contenedor Verde">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cuarto frio #68" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D28-TU-PKk" userLabel="Cuarto Frío">
+                                        <rect key="frame" x="127.5" y="52" width="159.5" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="thermometer_down" translatesAutoresizingMaskIntoConstraints="NO" id="cbF-Er-xGA" userLabel="Imagen Termometro">
+                                        <rect key="frame" x="20" y="91" width="374" height="347"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.60387316459295803" green="0.78039215689999997" blue="0.56172485579179221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="D28-TU-PKk" firstAttribute="top" secondItem="VcF-ES-Lhc" secondAttribute="top" constant="52" id="9Fx-Zc-wzC"/>
+                                    <constraint firstAttribute="trailing" secondItem="cbF-Er-xGA" secondAttribute="trailing" constant="20" id="EWM-62-F7O"/>
+                                    <constraint firstItem="cbF-Er-xGA" firstAttribute="top" secondItem="D28-TU-PKk" secondAttribute="bottom" constant="10" id="HPb-N3-ssm"/>
+                                    <constraint firstAttribute="bottom" secondItem="cbF-Er-xGA" secondAttribute="bottom" constant="10" id="Iqs-fj-iBb"/>
+                                    <constraint firstItem="D28-TU-PKk" firstAttribute="centerX" secondItem="VcF-ES-Lhc" secondAttribute="centerX" id="W2S-HH-b4A"/>
+                                    <constraint firstItem="cbF-Er-xGA" firstAttribute="leading" secondItem="VcF-ES-Lhc" secondAttribute="leading" constant="20" id="dV6-d9-PKS"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sUx-On-S2x" userLabel="Contenedor Salmon">
+                                <rect key="frame" x="0.0" y="448" width="414" height="448"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-2 °C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QnK-k3-wBA">
+                                        <rect key="frame" x="91" y="163" width="232" height="122"/>
+                                        <color key="tintColor" red="0.85847671028482342" green="0.97569373712884011" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="102"/>
+                                        <color key="textColor" red="0.99228440870000001" green="0.9599711689" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="highlightedColor" red="0.99228440865485701" green="0.9599711688586281" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.65623399519967851" blue="0.63203944674054091" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="QnK-k3-wBA" firstAttribute="centerY" secondItem="sUx-On-S2x" secondAttribute="centerY" id="Bn5-YZ-u6E"/>
+                                    <constraint firstItem="QnK-k3-wBA" firstAttribute="centerX" secondItem="sUx-On-S2x" secondAttribute="centerX" id="m9P-cU-7W5"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="VcF-ES-Lhc" secondAttribute="bottom" id="43k-Q4-Umb"/>
+                            <constraint firstItem="VcF-ES-Lhc" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="4eQ-VO-kMX"/>
+                            <constraint firstItem="sUx-On-S2x" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="Kzq-ku-cgw"/>
+                            <constraint firstItem="sUx-On-S2x" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="MFp-DY-z3f"/>
+                            <constraint firstItem="VcF-ES-Lhc" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="O6o-wE-8IZ"/>
+                            <constraint firstItem="VcF-ES-Lhc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Otd-2E-E0e"/>
+                            <constraint firstItem="sUx-On-S2x" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="UcR-sR-YXD"/>
+                            <constraint firstItem="VcF-ES-Lhc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fqm-k4-0ON"/>
+                            <constraint firstItem="sUx-On-S2x" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qza-i4-wbq"/>
+                            <constraint firstItem="VcF-ES-Lhc" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="x98-6e-4zL"/>
+                            <constraint firstAttribute="bottom" secondItem="sUx-On-S2x" secondAttribute="bottom" id="xhu-GN-01E"/>
+                            <constraint firstItem="sUx-On-S2x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="y3T-Xq-pQa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="43k-Q4-Umb"/>
+                                <exclude reference="O6o-wE-8IZ"/>
+                                <exclude reference="UcR-sR-YXD"/>
+                                <exclude reference="qza-i4-wbq"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="43k-Q4-Umb"/>
+                                <exclude reference="4eQ-VO-kMX"/>
+                                <include reference="O6o-wE-8IZ"/>
+                                <exclude reference="x98-6e-4zL"/>
+                                <exclude reference="MFp-DY-z3f"/>
+                                <include reference="UcR-sR-YXD"/>
+                                <include reference="qza-i4-wbq"/>
+                                <exclude reference="y3T-Xq-pQa"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="thermometer_down" width="512" height="512"/>
+    </resources>
 </document>
